tests/tokenizer/invalid_character.err.out
tests/tokenizer/invalid_character.err.ri:1:1: error: invalid character `¿`
      | 
    1 | ¿
      | ^ 
error: could not compile source code, aborting due to previous error